--- a/estilos.css
+++ b/estilos.css
@@ -15,7 +15,10 @@ a:hover {
 }
 body {
   font-family: 'Noto Sans JP', sans-serif;    
-  background: #F2F2F2;
+  /* background: #F2F2F2; */
+}
+p{
+  color: white;
 }
 header{
   width: 100%;
@@ -27,7 +30,7 @@ header{
 /* * ============ HEADER ========== */
 /* * ============================== */
 .navbar {
-  background: #AEEA00;
+  background: #a2d40cf5;
   position: sticky;
   top: 0%;
   z-index: 2;
@@ -45,6 +48,12 @@ header{
   color: #fff;
   text-decoration: none;
 }
+#blog{
+  background: #000000;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
 .contenedor {
   max-width: 1000px;
   width: 90%;
@@ -52,7 +61,18 @@ header{
   display: flex;
   justify-content: space-between;
 }
-
+.titulo{
+  color: white;
+}
+.titulo2{
+  color: black;
+}
+h1{
+  color: white;
+}
+.fecha{
+  color: white;
+}
 .hover{
   color: #000;
 }
@@ -96,7 +116,7 @@ aside {
   min-width: 30%;
   margin: 40px 20px 20px 0;
   height: 100%;
-  background: #3F3F3F; /*FONDO DE TEMAS*/
+  background: #a2d40cf5;/*FONDO DE TEMAS*/
   padding: 20px;
   border-radius: 3px;
   position: sticky;
@@ -112,7 +132,7 @@ aside .titulo {
 aside .indice a {
   display: block;
   margin-bottom: 10px;
-  color: #AEEA00;
+  color: #3F3F3F;
 }
 /* * ============================== */
 /* * ========== FOOTER ============ */
@@ -124,6 +144,20 @@ footer .navbar{
 /* * ============================== */
 /* * ====== MEDIA QUERIES ========= */
 /* * ============================== */
+@media screen and (max-width: 960px){
+  .container .card{
+    position: relative;
+    width: 218px;
+    height: 418px;
+    background: #232323;
+    border-radius: 20px;
+    overflow: hidden;;
+  }
+}
+
+
+
+
 @media screen and (max-width: 900px){
   .navbar .contenedor {
       flex-wrap: wrap;
@@ -240,9 +274,11 @@ video{
 }
 /* CARRITO */
 .padre{
-height: 800px;
-background-color: blue;
-display: flex;
+  height: 800px;
+  display: flex;
+  background: #000000;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .carrito{
 height: 500px;
@@ -293,10 +329,221 @@ border: solid 2px #AEEA00;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 250px;
-  margin: 50px;
+  height: 650px;
+  width: 100%;
+  margin: auto;
   
 }
+.h2{
+  text-align: center;
+  color: black;
+  font: bold;
+  border: solid 1px black;
+  background-color: white;
+}
+.fondobici{
+  text-align: center;
+  background-image: url(./images/fondobici2.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.animate{
+  height: 700px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; 
+}
+/*CARD CON LA FOTO*/
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=EB+Garamond:ital,wght@0,500;1,800&display=swap');
+
+
+body {
+background: #DFC2F2;
+	background-image: linear-gradient( to right, #ffffb3,#ffe6e6);
+	background-attachment: fixed;	
+	background-size: cover;
+  
+	}
+
+#container{
+	box-shadow: 0 15px 30px 1px grey;
+	background: rgba(255, 255, 255, 0.90);
+	text-align: center;
+	border-radius: 5px;
+	overflow: hidden;
+	margin: 5em auto;
+	height: 350px;
+	width: 700px;
+  
+	
+}
+
+
+
+.product-details {
+	position: relative;
+	text-align: left;
+	overflow: hidden;
+	padding: 30px;
+	height: 100%;
+	float: left;
+	width: 40%;
+
+}
+
+#container .product-details h1{
+	font-family: 'Bebas Neue', cursive;
+	display: inline-block;
+	position: relative;
+	font-size: 30px;
+	color: #344055;
+	margin: 0;
+	
+}
+
+#container .product-details h1:before{
+	position: absolute;
+	content: '';
+	right: 0%; 
+	top: 0%;
+	transform: translate(25px, -15px);
+	font-family: 'Bree Serif', serif;
+	display: inline-block;
+	background: #ffe6e6;
+	border-radius: 5px;
+	font-size: 14px;
+	padding: 5px;
+	color: white;
+	margin: 0;
+	animation: chan-sh 6s ease infinite;
+
+}
+
+
+
+	
+
+
+.hint-star {
+	display: inline-block;
+	margin-left: 0.5em;
+	color: gold;
+	width: 50%;
+}
+
+
+#container .product-details > p {
+font-family: 'EB Garamond', serif;
+	text-align: center;
+	font-size: 18px;
+	color: #7d7d7d;
+	
+}
+.control{
+	position: absolute;
+	bottom: 20%;
+	left: 22.8%;
+	
+}
+.btn {
+
+	transform: translateY(0px);
+	transition: 0.3s linear;
+	background:  #809fff;
+	border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+	cursor: pointer;
+	outline: none;
+	border: none;
+	color: #eee;
+	padding: 0;
+	margin: 0;
+	
+}
+
+.btn:hover{transform: translateY(-6px);
+	background: #1a66ff;}
+
+.btn span {
+	font-family: 'Farsan', cursive;
+	transition: transform 0.3s;
+	display: inline-block;
+  padding: 10px 20px;
+	font-size: 1.2em;
+	margin:0;
+	
+}
+.btn .price, .shopping-cart{
+	background: #333;
+	border: 0;
+	margin: 0;
+}
+
+.btn .price {
+	transform: translateX(-10%); padding-right: 15px;
+}
+
+.btn .shopping-cart {
+	transform: translateX(-100%);
+  position: absolute;
+	background: #333;
+	z-index: 1;
+  left: 0;
+  top: 0;
+}
+
+.btn .buy {z-index: 3; font-weight: bolder;}
+
+.btn:hover .price {transform: translateX(-110%);}
+
+.btn:hover .shopping-cart {transform: translateX(0%);}
+
+
+
+.product-image {
+	transition: all 0.3s ease-out;
+	display: inline-block;
+	position: relative;
+	overflow: hidden;
+	height: 100%;
+	float: right;
+	width: 45%;
+	display: inline-block;
+}
+
+#container img {width: 100%;height: 100%;}
+
+.info {
+    background: rgba(27, 26, 26, 0.9);
+    font-family: 'Bree Serif', serif;
+    transition: all 0.3s ease-out;
+    transform: translateX(-100%);
+    position: absolute;
+    line-height: 1.8;
+    text-align: left;
+    font-size: 105%;
+    cursor: no-drop;
+    color: #FFF;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+
+.info h2 {text-align: center}
+.product-image:hover .info{transform: translateX(0);}
+
+.info ul li{transition: 0.3s ease;}
+.info ul li:hover{transform: translateX(50px) scale(1.3);}
+
+.product-image:hover img {transition: all 0.3s ease-out;}
+.product-image:hover img {transform: scale(1.2, 1.2);}
+
+/*==========================*/
 .premium{
   height: 250px;
   margin: 50px;
@@ -541,7 +788,125 @@ border: solid 2px #AEEA00;
   margin: auto;
 }
 
-
+/*=================*/
+/*===CARDS COMBOS==*/
+/*==================*/
+.padre2{
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+.conte{
+  height: 510px;
+  width: 25%;
+  box-shadow:0 0 7px #111 ;
+  margin: 30px 30px;
+}
+.conte .card{
+  height: 200px;
+  width: 100%;
+  margin-bottom: 170px;
+}
+.card img{
+  margin: auto;
+  display: block;
+}
+.conte .stromtroper img{
+  height: 330px;
+  width: 330px;
+}
+.conte .stromtroper{
+   background-color: #111;
+}
+.conte .iron-man{
+  background-color: #6A0C0B;
+}
+.conte .spider-man{
+  background-color:#B11313;
+}
+.conte .iron-man img{
+  height: 330px;
+  width: 230px;
+}
+.conte .spider-man img{
+  height: 330px;
+  width: 300px;
+}
+.informacion{
+  height: 80px;
+  width: 100%;
+}
+.informacion h1{
+  font-family: sans-serif;
+  font-size: 1.2em;
+  text-align: center;
+  color: #333;
+  margin-bottom: -10px;
+}
+.informacion p{
+  text-align: center;
+  font-family: sans-serif;
+  font-size: .9em;
+  color: #555;
+}
+.precio {
+  height:50px;
+  width: 85%;
+  margin: auto;
+  font-family: sans-serif;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.box-precio{
+  width: 80px;
+}
+.precio1{
+  color: red;
+  font-size: .8em;
+}
+.precio .precio2{
+  font-size: 1.5em;
+}
+.shoping{
+  font-size: 1.5em;
+  color: #555;
+}
+@media (max-width:320px)
+{
+  .conte{
+      width: 100%;
+      margin: 30px 0;
+  }
+}
+@media (max-width:600px)
+{
+  .conte{
+      width: 100%;
+      margin: 30px 0;
+  }
+}
+@media (max-width:700px)
+{
+  .conte{
+      width: 80%;
+      margin: 30px 0;
+  }
+}
+@media (max-width:900px)
+{
+  .conte{
+      width: 40%;
+      margin: 30px 20px;
+  }
+}
+.botonCombo{
+background-color: #111;
+color:wheat;
+font-size:18px ;
+}
 
 
 
