--- a/estilos.css
+++ b/estilos.css
@@ -67,9 +67,6 @@ header{
 .titulo2{
   color: black;
 }
-h1{
-  color: white;
-}
 .fecha{
   color: white;
 }
@@ -299,7 +296,7 @@ padding: 30px;
   max-width: 300px;
   margin: auto;
   text-align: center;
-  font-family: arial;
+  
 }
 .price {
   color: grey;
@@ -321,9 +318,7 @@ color: white;
   background-color: #3F3F3F;
 border: solid 2px #AEEA00;
 }
-.boton{
 
-}
 /*PROMO*/
 .promo{
   display: flex;
@@ -334,16 +329,18 @@ border: solid 2px #AEEA00;
   margin: auto;
   
 }
-.h2{
+.imagenBici{
+  opacity:0.5;
+}
+.lema{
   text-align: center;
-  color: black;
-  font: bold;
-  border: solid 1px black;
-  background-color: white;
+  color: white;
+  font-size:35px;
+  padding: 250px;
 }
 .fondobici{
   text-align: center;
-  background-image: url(./images/fondobici2.jpg);
+  background-image: url(./images/fondobici2.jpeg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -510,8 +507,7 @@ font-family: 'EB Garamond', serif;
 	position: relative;
 	overflow: hidden;
 	height: 100%;
-	float: right;
-	width: 45%;
+  width: 45%;
 	display: inline-block;
 }
 
@@ -560,8 +556,8 @@ font-family: 'EB Garamond', serif;
 /* Style the list */
 .price {
   list-style-type: none;
-  border: 2px solid teal;
-  margin: 0;
+  border: 2px solid #AEEA00;
+  margin-bottom:60px;
   padding: 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -572,9 +568,10 @@ font-family: 'EB Garamond', serif;
 }
 /* Pricing header */
 .price .header {
-  background-color:teal;
-  color:wheat;
-  font-size: 25px;
+  background-color:#AEEA00;
+  color:black;
+  font-style:bold;
+ 
 }
 /* List items */
 .price li {
@@ -591,9 +588,9 @@ font-family: 'EB Garamond', serif;
 }
 /* The "Sign Up" button */
 .button {
-  background-color: #04AA6D;
+  background-color: #AEEA00;
   border: none;
-  color: white;
+  color:black;
   padding: 10px 25px;
   text-align: center;
   text-decoration: none;
@@ -604,7 +601,7 @@ font-family: 'EB Garamond', serif;
 @media only screen and (max-width: 600px) {
   .columns {
     width: 100%;
-  }
+}
 }
 .clear{
   clear: both;
